--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,13 @@
 *.so
 *.dylib
 
+/main
+/wrod-recognizer
+/tmp
+
 # Test binary, built with `go test -c`
 *.test
+.DS_store
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
